--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+body {
+  background-image: url("http://s1.1zoom.net/big0/68/214532-denc.jpg");
+}
+
 .row {
   margin: 0 auto 10px;
 }
 
 #pageTitle {
   text-align: center;
+  color: white;
+  font-size: 48px;
+  font-weight: bold;
 }
 
 #playerInfoDiv {
@@ -12,21 +19,50 @@
   margin: 0 auto 10px;
 }
 
-.playerInfo {
-  border: 5px solid blue;
+#timerContainer, 
+#bannerContainer,
+#scoreContainer {
+  border: 3px solid black;
+  height: 100px;
   text-align: center;
-  width: 50%;
-  margin-bottom: 10px;
-
+  margin: 5px auto;
+  border-radius: 5px;
 }
 
-#imageContainer {
-  margin: 0 auto;
+#timerContainer,
+#scoreContainer {
+  width: 20%;
 }
 
 #bannerContainer {
-  text-align: center;
-  border: 2px solid purple;
+  width: 60%;
+}
+
+#timer {
+  margin: 10px auto;
+  font-size: 24px;
+}
+
+#time {
+  font-weight: bold;
+  font-size: 32px;
+}
+
+#playerScore {
+  margin: 15px auto;
+}
+
+#startButton {
+  margin: 17px auto;
+  width: 50%;
+  font-size: 24px;
+}
+
+#banner {
+  margin: 25px auto;
+}
+#imageContainer {
+  margin: 0 auto;
 }
 
 #regions_div {
@@ -34,13 +70,15 @@
    height: 500px;
    border: 5px solid black;
    margin: 0 auto;
+   border-radius: 5px;
 }
 
 #playerGuess {
   text-align: center;
-  width: 80%;
+  width: 60%;
   margin: 0 auto;
-  border: 5px solid green;
+  border: 5px solid red;
+  border-radius: 5px;
 }
 
 #playerGuessText {
