--- a/style.css
+++ b/style.css
@@ -59,12 +59,15 @@ body {
   margin: 5px auto;
 }
 
-#startButton {
-  margin: 10px auto;
-  width: 50%;
-  font-size: 36px;
+.startBtn {
+  margin: 15px auto;
+  width: 20%;
+  height: 40px;
+  font-size: 16px;
   padding-top: 0px;
   padding-bottom: 0px;
+  padding-right: 5px;
+  text-align: center;
 }
 
 #banner {
